--- a/coding/main.html
+++ b/coding/main.html
@@ -65,7 +65,16 @@
 
         <footer id="footer" role="contentinfo">
             <div class="container">
-
+                <div class="footer1"></div>
+                <div class="footer2">
+                    <ul>
+                        <li><a href="#">instagram</a></li>
+                        <li><a href="#">q&a</a></li>
+                        <li><a href="#">youtube</a></li>
+                        <li><a href="#">emali</a></li>
+                    </ul>
+                </div>
+                <div class="footer3"></div>
             </div>
 
         </footer>
