--- a/coding/main.html
+++ b/coding/main.html
@@ -65,16 +65,40 @@
 
         <footer id="footer" role="contentinfo">
             <div class="container">
-                <div class="footer1"></div>
+                <div class="footer1">
+                    <div class="footer-logo">
+                        <img src="assets/img/WRM-logo.png" alt="">
+                    </div>
+                </div>
                 <div class="footer2">
                     <ul>
                         <li><a href="#">instagram</a></li>
+                        <li>|</li>
                         <li><a href="#">q&a</a></li>
+                        <li>|</li>
                         <li><a href="#">youtube</a></li>
+                        <li>|</li>
                         <li><a href="#">emali</a></li>
                     </ul>
                 </div>
-                <div class="footer3"></div>
+                <div class="footer3">
+                    <ul>
+                        <li><a href="#">웨이런미닝</a></li>
+                        <li>|</li>
+                        <li><a href="#">about us</a></li>
+                        <li>|</li>
+                        <li><a href="#">agreement</a></li>
+                        <li>|</li>
+                        <li><a href="#">privacy</a></li>
+                        <li>|</li>
+                        <li><a href="#">policy</a></li>
+                    </ul>
+                    <ul>
+                        <li><a href="#">nicejpm@naver.com</a></li>
+                        <li>|</li>
+                        <li><a href="#">개인정보처리방침 이용약관</a></li>
+                    </ul>
+                </div>
             </div>
 
         </footer>
