--- a/coding/main.html
+++ b/coding/main.html
@@ -17,7 +17,6 @@
     <meta name="twitter:url" content="#">
     <meta name="twitter:image" content="#">
     <meta name="twitter:description" content="WayRunMeaning에서 다양한 마라톤 정보와 일정을 확인하세요!" />
-
     <link href="assets/ico/favicon.png" rel="favicon icon">
     <link rel="stylesheet" href="assets/css/style.css">
 
@@ -32,7 +31,6 @@
                     <div class="logo">
                         <a href="main.html"></a>
                     </div>
-
                     <nav class="nav">
                         <ul>
                             <li class="active"><a href="#">대회일정</a></li>
@@ -41,14 +39,12 @@
                             <li><a href="#">마이페이지</a></li>
                         </ul>
                     </nav>
-
                     <div class="member">
                         <ul>
                             <li><a href="login.html">로그인</a></li>
                             <li><a href="register-1.html">회원가입</a></li>
                         </ul>
                     </div>
-
                 </div>
                 <!-- //header__inner -->
             </div>
@@ -56,54 +52,279 @@
         <!-- //header -->
 
         <main id="main" role="main">
-            <div class="container">
+            <div class="">
+                <div class="main__inner">
+                    <div class="main__title container">
+                        <img src="assets/img/wrm.png" alt="">
+                        <h2>
+                            The dark rose-colored texture delivers deep moisturizing and nutrition to tired and rough
+                            hair like <br>
+                            fatigue accumulated all day Check out the rosy night sky.
+                        </h2>
+                    </div>
+                    <div class="main__img">
+                        <img src="assets/img/titleimg.jpg" alt="마라톤">
+                    </div>
+                    <div class="main_info container">
+                        <span>Marathon InforMation</span>
+                        <ul>
+                            <li><a href="#">전체</a></li>
+                            <li><a href="#">플로깅</a></li>
+                            <li><a href="#">마라톤</a></li>
+                            <li><a href="#">이색</a></li>
+                            <li><a href="#">42km</a></li>
+                            <li><a href="#">42km</a></li>
+                        </ul>
+                    </div>
+                    <div class="main_info_post container">
+                        <div class="main_post">
+                            <div class="post1">
+                                <img src="assets/img/titleimg.jpg" alt="">
+                                <span class="map">서울>양천구</span>
+                                <span class="tit">한강 나이트 워크 42K</span>
+                                <span class="price">15,000원</span>
+                                <span class="day">24.04.27</span>
+                            </div>
+                            <div class="post2">
+                                <img src="assets/img/titleimg.jpg" alt="">
+                                <span class="map">서울>양천구</span>
+                                <span class="tit">한강 나이트 워크 42K</span>
+                                <span class="price">15,000원</span>
+                                <span class="day">24.04.27</span>
+                            </div>
+                            <div class="post3">
+                                <img src="assets/img/titleimg.jpg" alt="">
+                                <span class="map">서울>양천구</span>
+                                <span class="tit">한강 나이트 워크 42K</span>
+                                <span class="price">15,000원</span>
+                                <span class="day">24.04.27</span>
+                            </div>
+                            <div class="post4">
+                                <img src="assets/img/titleimg.jpg" alt="">
+                                <span class="map">서울>양천구</span>
+                                <span class="tit">한강 나이트 워크 42K</span>
+                                <span class="price">15,000원</span>
+                                <span class="day">24.04.27</span>
+                            </div>
+                            <div class="post5">
+                                <img src="assets/img/titleimg.jpg" alt="">
+                                <span class="map">서울>양천구</span>
+                                <span class="tit">한강 나이트 워크 42K</span>
+                                <span class="price">15,000원</span>
+                                <span class="day">24.04.27</span>
+                            </div>
+                            <div class="post6">
+                                <img src="assets/img/titleimg.jpg" alt="">
+                                <span class="map">서울>양천구</span>
+                                <span class="tit">한강 나이트 워크 42K</span>
+                                <span class="price">15,000원</span>
+                                <span class="day">24.04.27</span>
+                            </div>
+                        </div>
+                        <div>
+                            <span class="pl">더보기</span>
+                        </div>
+                    </div>
 
-            </div>
+                    <div class="main_ranking ">
+                        <span class="rank">인기있는 마라톤</span>
+                        <div class="rank_post container" style="width: 1000px;">
+                            <!-- Swiper -->
+                            <div class="swiper-container two">
+                                <div class="swiper-wrapper">
+                                    <div class="swiper-slide">
+                                        <div class="slider-image">
+                                            <img src="https://theme-land.com/sapp/demo/assets/img/screenshots/3.jpg"
+                                                alt="slide 1">
+                                        </div>
+                                    </div>
+                                    <div class="swiper-slide">
+                                        <div class="slider-image">
+                                            <img src="https://theme-land.com/sapp/demo/assets/img/screenshots/1.jpg"
+                                                alt="slide 2">
+                                        </div>
+                                    </div>
+                                    <div class="swiper-slide">
+                                        <div class="slider-image">
+                                            <img src="https://theme-land.com/sapp/demo/assets/img/screenshots/5.jpg"
+                                                alt="slide 3">
+                                        </div>
+                                    </div>
+                                    <div class="swiper-slide">
+                                        <div class="slider-image">
+                                            <img src="https://theme-land.com/sapp/demo/assets/img/screenshots/4.jpg"
+                                                alt="slide 4">
+                                        </div>
+                                    </div>
+                                    <div class="swiper-slide">
+                                        <div class="slider-image">
+                                            <img src="https://theme-land.com/sapp/demo/assets/img/screenshots/2.jpg"
+                                                alt="slide 5">
+                                        </div>
+                                    </div>
 
-        </main>
-        <!--//main -->
+                                    <div class="swiper-slide">
+                                        <div class="slider-image">
+                                            <img src="https://theme-land.com/sapp/demo/assets/img/screenshots/3.jpg"
+                                                alt="slide 6">
+                                        </div>
+                                    </div>
+                                    <div class="swiper-slide">
+                                        <div class="slider-image">
+                                            <img src="https://theme-land.com/sapp/demo/assets/img/screenshots/1.jpg"
+                                                alt="slide 7">
+                                        </div>
+                                    </div>
+                                    <div class="swiper-slide">
+                                        <div class="slider-image">
+                                            <img src="https://theme-land.com/sapp/demo/assets/img/screenshots/5.jpg"
+                                                alt="slide 8">
+                                        </div>
+                                    </div>
+                                    <div class="swiper-slide">
+                                        <div class="slider-image">
+                                            <img src="https://theme-land.com/sapp/demo/assets/img/screenshots/4.jpg"
+                                                alt="slide 9">
+                                        </div>
+                                    </div>
+                                    <div class="swiper-slide">
+                                        <div class="slider-image">
+                                            <img src="https://theme-land.com/sapp/demo/assets/img/screenshots/2.jpg"
+                                                alt="slide 10">
+                                        </div>
+                                    </div>
 
-        <footer id="footer" role="contentinfo">
-            <div class="container">
-                <div class="footer1">
-                    <div class="footer-logo">
-                        <img src="assets/img/WRM-logo.png" alt="">
+                                    <div class="swiper-slide">
+                                        <div class="slider-image">
+                                            <img src="https://theme-land.com/sapp/demo/assets/img/screenshots/3.jpg"
+                                                alt="slide 1">
+                                        </div>
+                                    </div>
+                                    <div class="swiper-slide">
+                                        <div class="slider-image">
+                                            <img src="https://theme-land.com/sapp/demo/assets/img/screenshots/1.jpg"
+                                                alt="slide 2">
+                                        </div>
+                                    </div>
+                                    <div class="swiper-slide">
+                                        <div class="slider-image">
+                                            <img src="https://theme-land.com/sapp/demo/assets/img/screenshots/5.jpg"
+                                                alt="slide 3">
+                                        </div>
+                                    </div>
+                                    <div class="swiper-slide">
+                                        <div class="slider-image">
+                                            <img src="https://theme-land.com/sapp/demo/assets/img/screenshots/4.jpg"
+                                                alt="slide 4">
+                                        </div>
+                                    </div>
+                                    <div class="swiper-slide">
+                                        <div class="slider-image">
+                                            <img src="https://theme-land.com/sapp/demo/assets/img/screenshots/2.jpg"
+                                                alt="slide 5">
+                                        </div>
+                                    </div>
+
+                                    <div class="swiper-slide">
+                                        <div class="slider-image">
+                                            <img src="https://theme-land.com/sapp/demo/assets/img/screenshots/3.jpg"
+                                                alt="slide 6">
+                                        </div>
+                                    </div>
+                                    <div class="swiper-slide">
+                                        <div class="slider-image">
+                                            <img src="https://theme-land.com/sapp/demo/assets/img/screenshots/1.jpg"
+                                                alt="slide 7">
+                                        </div>
+                                    </div>
+                                    <div class="swiper-slide">
+                                        <div class="slider-image">
+                                            <img src="https://theme-land.com/sapp/demo/assets/img/screenshots/5.jpg"
+                                                alt="slide 8">
+                                        </div>
+                                    </div>
+                                    <div class="swiper-slide">
+                                        <div class="slider-image">
+                                            <img src="https://theme-land.com/sapp/demo/assets/img/screenshots/4.jpg"
+                                                alt="slide 9">
+                                        </div>
+                                    </div>
+                                    <div class="swiper-slide">
+                                        <div class="slider-image">
+                                            <img src="https://theme-land.com/sapp/demo/assets/img/screenshots/2.jpg"
+                                                alt="slide 10">
+                                        </div>
+                                    </div>
+                                    <!-- Add Pagination -->
+                                </div>
+                                <div class="swiper-pagination"></div>
+                            </div>
+                            <!-- <div class="rank_post_1">
+                                <img src="assets/img/titleimg.jpg" alt="">
+                                <h2>test</h2>
+                                <p>test</p>
+                            </div>
+                            <div class="rank_post_2">
+                                <img src="assets/img/titleimg.jpg" alt="">
+                                <h2>test</h2>
+                                <p>test</p>
+                            </div>
+                            <div class="rank_post_3">
+                                <img src="assets/img/titleimg.jpg" alt="">
+                                <h2>test</h2>
+                                <p>test</p> -->
+                        </div>
                     </div>
                 </div>
-                <div class="footer2">
-                    <ul>
-                        <li><a href="#">instagram</a></li>
-                        <li>|</li>
-                        <li><a href="#">q&a</a></li>
-                        <li>|</li>
-                        <li><a href="#">youtube</a></li>
-                        <li>|</li>
-                        <li><a href="#">emali</a></li>
-                    </ul>
-                </div>
-                <div class="footer3">
-                    <ul>
-                        <li><a href="#">웨이런미닝</a></li>
-                        <li>|</li>
-                        <li><a href="#">about us</a></li>
-                        <li>|</li>
-                        <li><a href="#">agreement</a></li>
-                        <li>|</li>
-                        <li><a href="#">privacy</a></li>
-                        <li>|</li>
-                        <li><a href="#">policy</a></li>
-                    </ul>
-                    <ul>
-                        <li><a href="#">nicejpm@naver.com</a></li>
-                        <li>|</li>
-                        <li><a href="#">개인정보처리방침 이용약관</a></li>
-                    </ul>
+            </div>
+    </div>
+    </main>
+    <!--//main -->
+
+    <footer id="footer" role="contentinfo">
+        <div class="container">
+            <div class="footer1">
+                <div class="footer-logo">
+                    <img src="assets/img/WRM-logo.png" alt="">
                 </div>
             </div>
+            <div class="footer2">
+                <ul>
+                    <li><a href="#">instagram</a></li>
+                    <li>|</li>
+                    <li><a href="#">q&a</a></li>
+                    <li>|</li>
+                    <li><a href="#">youtube</a></li>
+                    <li>|</li>
+                    <li><a href="#">emali</a></li>
+                </ul>
+            </div>
+            <div class="footer3">
+                <ul>
+                    <li><a href="#">웨이런미닝</a></li>
+                    <li>|</li>
+                    <li><a href="#">about us</a></li>
+                    <li>|</li>
+                    <li><a href="#">agreement</a></li>
+                    <li>|</li>
+                    <li><a href="#">privacy</a></li>
+                    <li>|</li>
+                    <li><a href="#">policy</a></li>
+                </ul>
+                <ul>
+                    <li><a href="#">nicejpm@naver.com</a></li>
+                    <li>|</li>
+                    <li><a href="#">개인정보처리방침 이용약관</a></li>
+                </ul>
+            </div>
+        </div>
 
-        </footer>
-        <!-- //footer -->
+    </footer>
+    <!-- //footer -->
     </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    <script src="./assets/plugin/slider.js"></script>
 </body>
 
 </html>
