--- a/coding/main.html
+++ b/coding/main.html
@@ -54,79 +54,86 @@
         <main id="main" role="main">
             <div class="">
                 <div class="main__inner">
-                    <div class="main__title container">
-                        <img src="assets/img/wrm.png" alt="">
-                        <h2>
-                            The dark rose-colored texture delivers deep moisturizing and nutrition to tired and rough
-                            hair like <br>
-                            fatigue accumulated all day Check out the rosy night sky.
-                        </h2>
+                    <div class="main__title">
+                        <div class="container">
+                            <img src="assets/img/wrm.png" alt="">
+                            <h2>
+                                The dark rose-colored texture delivers deep moisturizing and nutrition to tired and
+                                rough
+                                hair like <br>
+                                fatigue accumulated all day Check out the rosy night sky.
+                            </h2>
+                        </div>
+
                     </div>
                     <div class="main__img">
                         <img src="assets/img/titleimg.jpg" alt="마라톤">
                     </div>
-                    <div class="main_info container">
-                        <span>Marathon InforMation</span>
-                        <ul>
-                            <li class="active"><a href="#">전체</a></li>
-                            <li><a href="#">플로깅</a></li>
-                            <li><a href="#">마라톤</a></li>
-                            <li><a href="#">이색</a></li>
-                            <li><a href="#">42km</a></li>
-                            <li><a href="#">42km</a></li>
-                        </ul>
-                    </div>
-                    <div class="main_info_post container">
-                        <div class="main_post">
-                            <div class="post1">
-                                <img src="assets/img/titleimg.jpg" alt="">
-                                <span class="map">서울>양천구</span>
-                                <span class="tit">한강 나이트 워크 42K</span>
-                                <span class="price">15,000원</span>
-                                <span class="day">24.04.27</span>
-                            </div>
-                            <div class="post2">
-                                <img src="assets/img/titleimg.jpg" alt="">
-                                <span class="map">서울>양천구</span>
-                                <span class="tit">한강 나이트 워크 42K</span>
-                                <span class="price">15,000원</span>
-                                <span class="day">24.04.27</span>
-                            </div>
-                            <div class="post3">
-                                <img src="assets/img/titleimg.jpg" alt="">
-                                <span class="map">서울>양천구</span>
-                                <span class="tit">한강 나이트 워크 42K</span>
-                                <span class="price">15,000원</span>
-                                <span class="day">24.04.27</span>
-                            </div>
-                            <div class="post4">
-                                <img src="assets/img/titleimg.jpg" alt="">
-                                <span class="map">서울>양천구</span>
-                                <span class="tit">한강 나이트 워크 42K</span>
-                                <span class="price">15,000원</span>
-                                <span class="day">24.04.27</span>
-                            </div>
-                            <div class="post5">
-                                <img src="assets/img/titleimg.jpg" alt="">
-                                <span class="map">서울>양천구</span>
-                                <span class="tit">한강 나이트 워크 42K</span>
-                                <span class="price">15,000원</span>
-                                <span class="day">24.04.27</span>
-                            </div>
-                            <div class="post6">
-                                <img src="assets/img/titleimg.jpg" alt="">
-                                <span class="map">서울>양천구</span>
-                                <span class="tit">한강 나이트 워크 42K</span>
-                                <span class="price">15,000원</span>
-                                <span class="day">24.04.27</span>
-                            </div>
-                        </div>
-                        <div>
-                            <span class="pl"><a href="#">더보기</a></span>
+                    <div class="main__info">
+                        <div class="container">
+                            <span>Marathon InforMation</span>
+                            <ul>
+                                <li class="active"><a href="#">전체</a></li>
+                                <li><a href="#">플로깅</a></li>
+                                <li><a href="#">마라톤</a></li>
+                                <li><a href="#">이색</a></li>
+                                <li><a href="#">42km</a></li>
+                                <li><a href="#">42km</a></li>
+                            </ul>
                         </div>
                     </div>
-
-                    <div class="main_ranking ">
+                    <div class="main__info_post">
+                        <div class="container">
+                            <div class="main_post">
+                                <div class="post1">
+                                    <a href="#"><img src="assets/img/titleimg.jpg" alt=""></a>
+                                    <span class="map">서울>양천구</span>
+                                    <span class="tit">한강 나이트 워크 42K</span>
+                                    <span class="price">15,000원</span>
+                                    <span class="day">24.04.27</span>
+                                </div>
+                                <div class="post2">
+                                    <a href="#"> <img src="assets/img/titleimg.jpg" alt=""></a>
+                                    <span class="map">서울>양천구</span>
+                                    <span class="tit">한강 나이트 워크 42K</span>
+                                    <span class="price">15,000원</span>
+                                    <span class="day">24.04.27</span>
+                                </div>
+                                <div class="post3">
+                                    <a href="#"><img src="assets/img/titleimg.jpg" alt=""></a>
+                                    <span class="map">서울>양천구</span>
+                                    <span class="tit">한강 나이트 워크 42K</span>
+                                    <span class="price">15,000원</span>
+                                    <span class="day">24.04.27</span>
+                                </div>
+                                <div class="post4">
+                                    <a href="#"><img src="assets/img/titleimg.jpg" alt=""></a>
+                                    <span class="map">서울>양천구</span>
+                                    <span class="tit">한강 나이트 워크 42K</span>
+                                    <span class="price">15,000원</span>
+                                    <span class="day">24.04.27</span>
+                                </div>
+                                <div class="post5">
+                                    <a href="#"><img src="assets/img/titleimg.jpg" alt=""></a>
+                                    <span class="map">서울>양천구</span>
+                                    <span class="tit">한강 나이트 워크 42K</span>
+                                    <span class="price">15,000원</span>
+                                    <span class="day">24.04.27</span>
+                                </div>
+                                <div class="post6">
+                                    <a href="#"><img src="assets/img/titleimg.jpg" alt=""></a>
+                                    <span class="map">서울>양천구</span>
+                                    <span class="tit">한강 나이트 워크 42K</span>
+                                    <span class="price">15,000원</span>
+                                    <span class="day">24.04.27</span>
+                                </div>
+                            </div>
+                            <div>
+                                <span class="pl"><a href="#">더보기</a></span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="main__ranking ">
                         <span class="rank">인기있는 마라톤</span>
                         <div class="rank_post container" style="width: 1000px;">
                             <!-- Swiper -->
@@ -260,80 +267,96 @@
                                 </div>
                                 <div class="swiper-pagination"></div>
                             </div>
-                            <!-- <div class="rank_post_1">
-                                <img src="assets/img/titleimg.jpg" alt="">
-                                <h2>test</h2>
-                                <p>test</p>
-                            </div>
-                            <div class="rank_post_2">
-                                <img src="assets/img/titleimg.jpg" alt="">
-                                <h2>test</h2>
-                                <p>test</p>
-                            </div>
-                            <div class="rank_post_3">
-                                <img src="assets/img/titleimg.jpg" alt="">
-                                <h2>test</h2>
-                                <p>test</p> -->
                         </div>
+                    </div>
+                    <div class="main__sub__title">
+                        <div class="container">
+                            <span>서울 지역 마라톤 모음</span>
+                            <div class="main__sub__post">
+                                <div class="post1">
+                                    <img src="assets/img/titleimg.jpg" alt="">
+                                    <span class="map">서울>양천구</span>
+                                    <span class="tit">한강 나이트 워크 42K</span>
+                                    <span class="price">15,000원</span>
+                                    <span class="day">24.04.27</span>
+                                </div>
+                                <div class="post2">
+                                    <img src="assets/img/titleimg.jpg" alt="">
+                                    <span class="map">서울>양천구</span>
+                                    <span class="tit">한강 나이트 워크 42K</span>
+                                    <span class="price">15,000원</span>
+                                    <span class="day">24.04.27</span>
+                                </div>
+                                <div class="post3">
+                                    <img src="assets/img/titleimg.jpg" alt="">
+                                    <span class="map">서울>양천구</span>
+                                    <span class="tit">한강 나이트 워크 42K</span>
+                                    <span class="price">15,000원</span>
+                                    <span class="day">24.04.27</span>
+                                </div>
+                            </div>
+                        </div>
+
                     </div>
                 </div>
             </div>
-    </div>
-    </main>
-    <!--//main -->
+        </main>
+        <!--//main -->
 
-    <footer id="footer" role="contentinfo">
-        <div class="container">
-            <div class="footer__lnner">
-                <div class="left">
-                    <ul>
-                        <li><a href="#">멤버가입</a></li>
-                        <li><a href="#">고객센터</a>
-                            <ul>
-                                <li><a href="#">공지사항</a></li>
-                                <li><a href="#">문의하기</a></li>
-                            </ul>
-                        </li>
-                    </ul>
-
-                </div>
-                <div class="right">
-                    <div class="sns">
+        <footer id="footer" role="contentinfo">
+            <div class="container">
+                <div class="footer__lnner">
+                    <div class="left">
                         <ul>
-                            <li><a href="#"><span class="blind">페이스북</span></a></li>
-                            <li><a href="#"><span class="blind">트위터</span></a></li>
-                            <li><a href="#"><span class="blind">인스타그램</span></a></li>
-                            <li><a href="#"><span class="blind">유튜브</span></a></li>
+                            <li><a href="#">멤버가입</a></li>
+                            <li><a href="#">고객센터</a>
+                                <ul>
+                                    <li><a href="#">공지사항</a></li>
+                                    <li><a href="#">문의하기</a></li>
+                                </ul>
+                            </li>
                         </ul>
 
                     </div>
+                    <div class="right">
+                        <div class="sns">
+                            <ul>
+                                <li><a href="#"><span class="blind">페이스북</span></a></li>
+                                <li><a href="#"><span class="blind">트위터</span></a></li>
+                                <li><a href="#"><span class="blind">인스타그램</span></a></li>
+                                <li><a href="#"><span class="blind">유튜브</span></a></li>
+                            </ul>
+
+                        </div>
+                    </div>
                 </div>
+
+                <div class="footer__bot">
+                    <div class="left_bot">
+                        <p class="copy">COPYRIGHT © WayRunMeaning. All Rights Reserved.</p>
+                    </div>
+                    <div class="right_bot">
+                        <ul>
+                            <li><a href="#">이용약관</a></li>
+                            <li><a href="#">위치 기반 서비스 약관</a></li>
+                            <li><a href="#">개인정보처리방침</a></li>
+                        </ul>
+                    </div>
+
+                </div>
+                <hr>
+                <p class="maile">nicejpm@naver.com</p>
             </div>
-
-            <div class="footer__bot">
-                <div class="left_bot">
-                    <p class="copy">COPYRIGHT © WayRunMeaning. All Rights Reserved.</p>
-                </div>
-                <div class="right_bot">
-                    <ul>
-                        <li><a href="#">이용약관</a></li>
-                        <li><a href="#">위치 기반 서비스 약관</a></li>
-                        <li><a href="#">개인정보처리방침</a></li>
-                    </ul>
-                </div>
-
-            </div>
-            <hr>
-            <p class="maile">nicejpm@naver.com</p>
-        </div>
-
-        </div>
-    </footer>
-    <!-- //footer -->
+        </footer>
+        <!-- //footer -->
     </div>
 
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollToPlugin.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="./assets/plugin/slider.js"></script>
+
 </body>
 
 </html>
