--- a/coding/main.html
+++ b/coding/main.html
@@ -91,6 +91,9 @@
                                     <span class="tit">한강 나이트 워크 42K</span>
                                     <span class="price">15,000원</span>
                                     <span class="day">24.04.27</span>
+                                    <div class="heart-icon" onclick="toggleFavorite(this)">
+                                        <img src="./assets/img/heart.svg" alt="heart Icon">
+                                    </div>
                                 </div>
                                 <div class="post2">
                                     <a href="#"> <img src="assets/img/titleimg.jpg" alt=""></a>
@@ -98,6 +101,9 @@
                                     <span class="tit">한강 나이트 워크 42K</span>
                                     <span class="price">15,000원</span>
                                     <span class="day">24.04.27</span>
+                                    <div class="heart-icon" onclick="toggleFavorite(this)">
+                                        <img src="./assets/img/heart.svg" alt="heart Icon">
+                                    </div>
                                 </div>
                                 <div class="post3">
                                     <a href="#"><img src="assets/img/titleimg.jpg" alt=""></a>
@@ -105,6 +111,9 @@
                                     <span class="tit">한강 나이트 워크 42K</span>
                                     <span class="price">15,000원</span>
                                     <span class="day">24.04.27</span>
+                                    <div class="heart-icon" onclick="toggleFavorite(this)">
+                                        <img src="./assets/img/heart.svg" alt="heart Icon">
+                                    </div>
                                 </div>
                                 <div class="post4">
                                     <a href="#"><img src="assets/img/titleimg.jpg" alt=""></a>
@@ -112,6 +121,9 @@
                                     <span class="tit">한강 나이트 워크 42K</span>
                                     <span class="price">15,000원</span>
                                     <span class="day">24.04.27</span>
+                                    <div class="heart-icon" onclick="toggleFavorite(this)">
+                                        <img src="./assets/img/heart.svg" alt="heart Icon">
+                                    </div>
                                 </div>
                                 <div class="post5">
                                     <a href="#"><img src="assets/img/titleimg.jpg" alt=""></a>
@@ -119,6 +131,9 @@
                                     <span class="tit">한강 나이트 워크 42K</span>
                                     <span class="price">15,000원</span>
                                     <span class="day">24.04.27</span>
+                                    <div class="heart-icon" onclick="toggleFavorite(this)">
+                                        <img src="./assets/img/heart.svg" alt="heart Icon">
+                                    </div>
                                 </div>
                                 <div class="post6">
                                     <a href="#"><img src="assets/img/titleimg.jpg" alt=""></a>
@@ -126,6 +141,9 @@
                                     <span class="tit">한강 나이트 워크 42K</span>
                                     <span class="price">15,000원</span>
                                     <span class="day">24.04.27</span>
+                                    <div class="heart-icon" onclick="toggleFavorite(this)">
+                                        <img src="./assets/img/heart.svg" alt="heart Icon">
+                                    </div>
                                 </div>
                             </div>
                             <div>
@@ -279,6 +297,9 @@
                                     <span class="tit">한강 나이트 워크 42K</span>
                                     <span class="price">15,000원</span>
                                     <span class="day">24.04.27</span>
+                                    <div class="heart-icon" onclick="toggleFavorite(this)">
+                                        <img src="./assets/img/heart.svg" alt="heart Icon">
+                                    </div>
                                 </div>
                                 <div class="post2">
                                     <img src="assets/img/titleimg.jpg" alt="">
@@ -286,6 +307,9 @@
                                     <span class="tit">한강 나이트 워크 42K</span>
                                     <span class="price">15,000원</span>
                                     <span class="day">24.04.27</span>
+                                    <div class="heart-icon" onclick="toggleFavorite(this)">
+                                        <img src="./assets/img/heart.svg" alt="heart Icon">
+                                    </div>
                                 </div>
                                 <div class="post3">
                                     <img src="assets/img/titleimg.jpg" alt="">
@@ -293,6 +317,9 @@
                                     <span class="tit">한강 나이트 워크 42K</span>
                                     <span class="price">15,000원</span>
                                     <span class="day">24.04.27</span>
+                                    <div class="heart-icon" onclick="toggleFavorite(this)">
+                                        <img src="./assets/img/heart.svg" alt="heart Icon">
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -304,6 +331,7 @@
         <!--//main -->
 
         <footer id="footer" role="contentinfo">
+            <hr>
             <div class="container">
                 <div class="footer__lnner">
                     <div class="left">
