--- a/coding/main.html
+++ b/coding/main.html
@@ -34,7 +34,7 @@
                     <nav class="nav">
                         <ul>
                             <li class="active"><a href="#">대회일정</a></li>
-                            <li><a href="#">커모니티</a></li>
+                            <li><a href="#">커뮤니티</a></li>
                             <li><a href="#">게시판</a></li>
                             <li><a href="#">마이페이지</a></li>
                         </ul>
