--- a/coding/congrats.html
+++ b/coding/congrats.html
@@ -76,47 +76,54 @@
                 <!-- // member__form -->
             </div>
             <!--//main -->
-
             <footer id="footer" role="contentinfo">
+                <hr>
                 <div class="container">
-                    <div class="footer1">
-                        <div class="footer-logo">
-                            <img src="assets/img/WRM-logo.png" alt="">
+                    <div class="footer__lnner">
+                        <div class="left">
+                            <ul>
+                                <li><a href="#">멤버가입</a></li>
+                                <li><a href="#">고객센터</a>
+                                    <ul>
+                                        <li><a href="#">공지사항</a></li>
+                                        <li><a href="#">문의하기</a></li>
+                                    </ul>
+                                </li>
+                            </ul>
+
+                        </div>
+                        <div class="right">
+                            <div class="sns">
+                                <ul>
+                                    <li><a href="#"><span class="blind">페이스북</span></a></li>
+                                    <li><a href="#"><span class="blind">트위터</span></a></li>
+                                    <li><a href="#"><span class="blind">인스타그램</span></a></li>
+                                    <li><a href="#"><span class="blind">유튜브</span></a></li>
+                                </ul>
+
+                            </div>
                         </div>
                     </div>
-                    <div class="footer2">
-                        <ul>
-                            <li><a href="#">instagram</a></li>
-                            <li>|</li>
-                            <li><a href="#">q&a</a></li>
-                            <li>|</li>
-                            <li><a href="#">youtube</a></li>
-                            <li>|</li>
-                            <li><a href="#">emali</a></li>
-                        </ul>
-                    </div>
-                    <div class="footer3">
-                        <ul>
-                            <li><a href="#">웨이런미닝</a></li>
-                            <li>|</li>
-                            <li><a href="#">about us</a></li>
-                            <li>|</li>
-                            <li><a href="#">agreement</a></li>
-                            <li>|</li>
-                            <li><a href="#">privacy</a></li>
-                            <li>|</li>
-                            <li><a href="#">policy</a></li>
-                        </ul>
-                        <ul>
-                            <li><a href="#">nicejpm@naver.com</a></li>
-                            <li>|</li>
-                            <li><a href="#">개인정보처리방침 이용약관</a></li>
-                        </ul>
-                    </div>
-                </div>
 
+                    <div class="footer__bot">
+                        <div class="left_bot">
+                            <p class="copy">COPYRIGHT © WayRunMeaning. All Rights Reserved.</p>
+                        </div>
+                        <div class="right_bot">
+                            <ul>
+                                <li><a href="#">이용약관</a></li>
+                                <li><a href="#">위치 기반 서비스 약관</a></li>
+                                <li><a href="#">개인정보처리방침</a></li>
+                            </ul>
+                        </div>
+
+                    </div>
+                    <hr>
+                    <p class="maile">nicejpm@naver.com</p>
+                </div>
             </footer>
             <!-- //footer -->
+
     </div>
 </body>
 
