--- a/coding/congrats.html
+++ b/coding/congrats.html
@@ -70,7 +70,7 @@
                         <img src="./assets/img/congrats.svg" alt="SVG Image">
                     </div>
                     <div class="member__btn">
-                        <button type="submit">홈으로</button>
+                        <button type="submit"><a href="main.html" style="color: #fff;">홈으로</a></button>
                     </div>
                 </div>
                 <!-- // member__form -->
