--- a/coding/main.html
+++ b/coding/main.html
@@ -33,7 +33,13 @@
                     </div>
                     <nav class="nav">
                         <ul>
-                            <li class="active"><a href="#">대회일정</a></li>
+                            <li class="active"><a href="#">대회일정</a>
+                                <ul class="blind">
+                                    <li><a href="#">전체</a></li>
+                                    <li><a href="#">마라톤</a></li>
+                                    <li><a href="#">플로깅</a></li>
+                                </ul>
+                            </li>
                             <li><a href="#">커뮤니티</a></li>
                             <li><a href="#">게시판</a></li>
                             <li><a href="#">마이페이지</a></li>
@@ -86,7 +92,7 @@
                         <div class="container">
                             <div class="main_post">
                                 <div class="post1">
-                                    <a href="#"><img src="assets/img/titleimg.jpg" alt=""></a>
+                                    <a href="#"><img src="assets/img/post.png" alt=""></a>
                                     <span class="map">서울>양천구</span>
                                     <span class="tit">한강 나이트 워크 42K</span>
                                     <span class="price">15,000원</span>
@@ -96,7 +102,7 @@
                                     </div>
                                 </div>
                                 <div class="post2">
-                                    <a href="#"> <img src="assets/img/titleimg.jpg" alt=""></a>
+                                    <a href="#"> <img src="assets/img/image.png" alt=""></a>
                                     <span class="map">서울>양천구</span>
                                     <span class="tit">한강 나이트 워크 42K</span>
                                     <span class="price">15,000원</span>
@@ -159,15 +165,13 @@
                                 <div class="swiper-wrapper">
                                     <div class="swiper-slide">
                                         <div class="slider-image">
-                                            <img src="https://theme-land.com/sapp/demo/assets/img/screenshots/3.jpg"
-                                                alt="slide 1">
+                                            <img src="./assets/img/image.png" alt="slide 1">
                                             <span>test</span>
                                         </div>
                                     </div>
                                     <div class="swiper-slide">
                                         <div class="slider-image">
-                                            <img src="https://theme-land.com/sapp/demo/assets/img/screenshots/1.jpg"
-                                                alt="slide 2">
+                                            <img src="./assets/img/post.png" alt="slide 2">
                                         </div>
                                     </div>
                                     <div class="swiper-slide">
