--- a/coding/main.html
+++ b/coding/main.html
@@ -21,6 +21,10 @@
     <link rel="stylesheet" href="assets/css/style.css">
 
     <title>WayRunMeaning : 러닝 & 마라톤</title>
+
+    <style>
+
+    </style>
 </head>
 
 <body>
@@ -33,14 +37,20 @@
                     </div>
                     <nav class="nav">
                         <ul>
-                            <li class="active"><a href="#">대회일정</a>
-                                <ul class="blind">
+                            <li><a href="#">대회일정</a>
+                                <ul class="submenu">
                                     <li><a href="#">전체</a></li>
                                     <li><a href="#">마라톤</a></li>
                                     <li><a href="#">플로깅</a></li>
                                 </ul>
                             </li>
-                            <li><a href="#">커뮤니티</a></li>
+                            <li><a href="#">커뮤니티</a>
+                                <ul class="submenu">
+                                    <li><a href="#">커뮤</a></li>
+                                    <li><a href="#">커뮤</a></li>
+                                    <li><a href="#">커뮤</a></li>
+                                </ul>
+                            </li>
                             <li><a href="#">게시판</a></li>
                             <li><a href="#">마이페이지</a></li>
                         </ul>
@@ -92,7 +102,7 @@
                         <div class="container">
                             <div class="main_post">
                                 <div class="post1">
-                                    <a href="#"><img src="assets/img/post.png" alt=""></a>
+                                    <a href="#"><img src="assets/img/post1.png" alt=""></a>
                                     <span class="map">서울>양천구</span>
                                     <span class="tit">한강 나이트 워크 42K</span>
                                     <span class="price">15,000원</span>
@@ -389,6 +399,21 @@
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="./assets/plugin/slider.js"></script>
 
+    <script>
+        window.onload = function () {
+            const navList = document.querySelectorAll(".nav >ul>li");
+
+            navList.forEach(function (navItem) {
+                navItem.addEventListener("mouseover", function () {
+                    this.querySelector(".submenu").style.display = "block";
+                })
+
+                navItem.addEventListener("mouseout", function () {
+                    this.querySelector(".submenu").style.display = "none";
+                })
+            })
+        }
+    </script>
 </body>
 
 </html>
