--- a/coding/main.html
+++ b/coding/main.html
@@ -22,9 +22,6 @@
 
     <title>WayRunMeaning : 러닝 & 마라톤</title>
 
-    <style>
-
-    </style>
 </head>
 
 <body>
@@ -33,7 +30,7 @@
             <div class="container">
                 <div class="header__inner">
                     <div class="logo">
-                        <a href="main.html"></a>
+                        <a href="main.html"><img src="./assets/img/logo.svg" alt=""></a>
                     </div>
                     <nav class="nav">
                         <ul>
@@ -70,17 +67,10 @@
         <main id="main" role="main">
             <div class="">
                 <div class="main__inner">
-                    <div class="main__title">
-                        <div class="container">
-                            <img src="assets/img/wrm.png" alt="">
-                            <h2>
-                                The dark rose-colored texture delivers deep moisturizing and nutrition to tired and
-                                rough
-                                hair like <br>
-                                fatigue accumulated all day Check out the rosy night sky.
-                            </h2>
+                    <div class="container">
+                        <div class="main__title">
+                            <img src="./assets/img/svg/banner.svg" alt="">
                         </div>
-
                     </div>
                     <div class="main__img">
                         <img src="assets/img/titleimg.jpg" alt="마라톤">
@@ -102,7 +92,7 @@
                         <div class="container">
                             <div class="main_post">
                                 <div class="post1">
-                                    <a href="#"><img src="assets/img/post1.png" alt=""></a>
+                                    <a href="#"><img src="assets/img/logo.svg" alt=""></a>
                                     <span class="map">서울>양천구</span>
                                     <span class="tit">한강 나이트 워크 42K</span>
                                     <span class="price">15,000원</span>
