--- a/coding/main.html
+++ b/coding/main.html
@@ -285,7 +285,9 @@
                                 </div>
                             </div>
                             <div class="box1-2">
-                                <img src="./assets/img/motto.svg" alt="motto">
+                                <div class="box1-2-1">
+                                    <img src="assets/img/motto.svg" alt="">
+                                </div>
                             </div>
                         </div>
                     </div>
